Version 2.7.9.dev:

* More compact binary distributions, far fewer data files.
* OS X: New skeleton .app launchers for portable suite.
* Windows: Proxy executables passes on arguments.
* Recognize .ccd CD variants from the online game database.

Version 2.7.8dev:

* You can add custom config on startup (--config:key=value). Especially
  useful when auto-launching games and you want to override config.
* You can start with custom settings (--settings:key=value). Note that the
  changed settings will be permanent / saved.
* Make distinction between Amiga device type and host device more explicit.
* Made launch dialog non-modal.
* Net play feature is enabled by default.
* Moved net play UI into a separate window.
* Clear search field when changing game/config list in dropdown.
* All .sqlite databases moved into Data/Databases.
* Some user interface adjustments.
* Quite a bit of code cleanup and some restructuring.

Version 2.7.7dev:

* Always sort variant list in rated order from oagd.net, but prefer
  locally available variants.
* Automatically scan $BASE/AmigaForever/Amiga Files/Shared/rom for Kickstarts.
* Automatically add $BASE/AmigaForever/Amiga Files to file scanner.
* Kickstart import: Show how many ROM files were imported (or warn if none).
* Blacklist mouse_integration from advanced settings (use per-config instead).
* Added support for WHDLoad 18.2, set as default version.

Version 2.7.6dev:

* Most dialogs are non-modal again.
* Misc user interface updates.

Version 2.7.5dev:

* Remember maximized state.

Version 2.7.4dev:

* Fixed bug when base-dir in config file had a trailing slash.
* Imported updated translations from crowdin.com.

Version 2.7.2dev:

* Fixed /hostgame netplay command (server was started on wrong port).

Version 2.5.41dev:

* Support FS-UAE environment variables in advanced settings.
* Fix appearance settings when theme is set to standard.
* Imported updated translations from crowdin.com.

Version 2.5.40dev:
